# pov-display-rpi

./: .cproject  .gitignore  Makefile  Makefile.am  Readme.md  configure.ac  make.sh
Debug/: makefile  test
Debug/src/: subdir.mk  test.d
include/: GPIO.h  common.h  display.h  gpio_ctl.h  render.h  spi.h  stamp-h1  tlc59711.h
src/: GPIO.c  display.c  gpio_ctl.c  main.cpp  render.c  render.cpp  spi.c  test.cpp  testcontroll.cpp  tlc59711.c
teh/: fp-info-cache  teh.kicad_pcb  teh.kicad_pcb-bak
teh/gerber/: teh-B_Cu.gbr  teh-B_Mask.gbr  teh-B_SilkS.gbr  teh-Edge_Cuts.gbr  teh-F_Cu.gbr  teh-F_Mask.gbr  teh-F_SilkS.gbr  teh.drl
